force-app/main/default/objects/Spare__c/Spare__c.object-meta.xml
<CustomObject>
    <label>Spare</label>
    <nameField>
        <label>Spare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>