force-app/main/default/objects/Spare__c/fields/After_Treatment_Serial_2__c.field-meta.xml
<CustomField>
    <fullName>After_Treatment_Serial_2__c</fullName>
    <label>After-Treatment Serial 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>