force-app/main/default/objects/Spare__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <label>Shipped Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>