force-app/main/default/objects/Spare__c/fields/Spare_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Spare_Serial_Number__c</fullName>
    <label>Spare Serial Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>